hw25 complete